--- a/app/styles/plugins/swagger/reset.css
+++ b/app/styles/plugins/swagger/reset.css
@@ -70,7 +70,6 @@
 .swagger-section figcaption,
 .swagger-section footer,
 .swagger-section header,
-.swagger-section hgroup,
 .swagger-section menu,
 .swagger-section nav,
 .swagger-section output,
@@ -97,7 +96,6 @@
 .swagger-section figure,
 .swagger-section footer,
 .swagger-section header,
-.swagger-section hgroup,
 .swagger-section menu,
 .swagger-section nav,
 .swagger-section section {
