--- a/app/styles/plugins/swagger/screen.css
+++ b/app/styles/plugins/swagger/screen.css
@@ -123,7 +123,7 @@
 .swagger-section .swagger-ui-wrap {
   line-height: 1;
   font-family: "Droid Sans", sans-serif;
-  max-width: 960px;
+  max-width: 100%;
 }
 .swagger-section .swagger-ui-wrap b,
 .swagger-section .swagger-ui-wrap strong {
@@ -1274,4 +1274,24 @@
   min-height: 30px;
   text-align: center;
   padding-top: 10px;
+}
+
+
+/*Override bootstrap container sizes*/
+@media (min-width: 1200px) {
+  .container {
+    width: 100%;
+  }
+}
+
+@media (min-width: 992px) {
+  .container {
+    width: 100%
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    width: 100%
+  }
 }
