--- a/app/styles/plugins/swagger/style.css
+++ b/app/styles/plugins/swagger/style.css
@@ -61,7 +61,7 @@ h1 {
   border-color: #0A0A0A;
 }
 .container1 {
-  width: 1500px;
+  width: 100%;
   margin: auto;
   margin-top: 0;
   background-repeat: no-repeat;
@@ -69,7 +69,7 @@ h1 {
   margin-bottom: 210px;
 }
 .container-inner {
-  width: 1200px;
+  width: 80%;
   margin: auto;
   background-color: rgba(223, 227, 228, 0.75);
   padding-bottom: 40px;
@@ -78,7 +78,7 @@ h1 {
 }
 .header-content {
   padding: 0;
-  width: 1000px;
+  width: 66%;
 }
 .title1 {
   font-size: 80px;
